--- a/app/views/index.html
+++ b/app/views/index.html
@@ -18,7 +18,7 @@
     <!--[if lt IE 8]>
         <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
     <![endif]-->
-    <header ng-include="'nav.html'"></header>
+    <header ng-include="'app/views/nav.html'"></header>
     <ul class="clearfix">
       <li>Name</li>
       <li>Category</li>
