travis with firefox

--- a/app/views/nav.html
+++ b/app/views/nav.html
@@ -1,6 +1,6 @@
 <nav>
   <ul class="clearfix">
-    <li><a href="#/">Catalogue</a></li>
-    <li><a href="#/my-cart">MyCart</a></li>
+    <li><a ng-href="#/">Catalogue</a></li>
+    <li><a ng-href="#/my-cart">MyCart</a></li>
   </ul>
 </nav>
