--- a/app/views/index.html
+++ b/app/views/index.html
@@ -14,39 +14,22 @@
     <link rel="stylesheet" href="/css/main.css">
     <script src="/bower_components/modernizr/modernizr.js"></script>
   </head>
-  <body ng-controller="CartController">
+  <body>
     <!--[if lt IE 8]>
         <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
     <![endif]-->
-    <header ng-include="'app/views/nav.html'"></header>
-    <ul class="clearfix">
-      <li>Name</li>
-      <li>Category</li>
-      <li>Price</li>
-      <li>Stock number</li>
-      <li>MyCart</li>
-    </ul>
-
-    <ul class="clearfix" ng-repeat="product in products">
-      <li>{{product.name}}</li>
-      <li>{{product.category}}</li>
-      <li>{{product.price | currency:"£"}}</li>
-      <li>{{product.stock_quantity}}</li>
-      <li>
-        <ul class="cart-options">
-          <li><a href="#">Add to cart</a></li>
-          <li><a href="#">Remove</a></li>
-        </ul>
-      </li>
-    </ul>
+    <header ng-include="'/partials/nav.html'"></header>
+    <main ng-view></main>  
 
 
     <script src="/bower_components/angular/angular.min.js"></script>
+    <script src="/bower_components/angular-route/angular-route.min.js"></script>
     <script src="/bower_components/angular-resource/angular-resource.min.js"></script>
     <script src="/bower_components/jquery/dist/jquery.min.js"></script>
     <script src="/js/plugins.js"></script>
     <script src="/angular_app/app.js"></script>
     <script src="/angular_app/services/jsonService.js"></script>
+    <script src="/angular_app/controllers/products.js"></script>
     <script src="/angular_app/controllers/cart.js"></script>
     <script src="/js/cart.js"></script>
   </body>
