--- a/app/views/index.html
+++ b/app/views/index.html
@@ -14,7 +14,7 @@
     <link rel="stylesheet" href="/css/main.css">
     <script src="/bower_components/modernizr/modernizr.js"></script>
   </head>
-  <body>
+  <body ng-controller="CartController as cart">
     <!--[if lt IE 8]>
         <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
     <![endif]-->
@@ -28,8 +28,7 @@
     <script src="/bower_components/jquery/dist/jquery.min.js"></script>
     <script src="/js/plugins.js"></script>
     <script src="/angular_app/app.js"></script>
-    <script src="/angular_app/services/jsonService.js"></script>
-    <script src="/angular_app/controllers/products.js"></script>
+    <script src="/angular_app/services/cartService.js"></script>
     <script src="/angular_app/controllers/cart.js"></script>
     <script src="/js/cart.js"></script>
   </body>
