--- a/app/public/partials/nav.html
+++ b/app/public/partials/nav.html
@@ -4,7 +4,7 @@
     <li><a ng-href="#/my-cart">My Cart</a>
       <ul>
         <li id="nav-items">Items: {{numberInCart();}}</li>
-        <li id="nav-total">Current total: {{total}}</li>
+        <li id="nav-total">Current total: £{{total();}}</li>
       </ul>  
     </li>
   </ul>
