--- a/app/views/index.html
+++ b/app/views/index.html
@@ -21,7 +21,7 @@
     <header ng-include="'/partials/nav.html'"></header>
     <main ng-view></main>  
 
-
+    <script src="/bower_components/underscore/underscore-min.js"></script>
     <script src="/bower_components/angular/angular.min.js"></script>
     <script src="/bower_components/angular-route/angular-route.min.js"></script>
     <script src="/bower_components/angular-resource/angular-resource.min.js"></script>
