--- a/app/views/index.html
+++ b/app/views/index.html
@@ -28,6 +28,7 @@
     <script src="/bower_components/jquery/dist/jquery.min.js"></script>
     <script src="/js/plugins.js"></script>
     <script src="/angular_app/app.js"></script>
+    <script src="/angular_app/services/displayService.js"></script>
     <script src="/angular_app/services/cartService.js"></script>
     <script src="/angular_app/controllers/cart.js"></script>
     <script src="/js/cart.js"></script>
