--- a/app/public/partials/nav.html
+++ b/app/public/partials/nav.html
@@ -1,10 +1,24 @@
-<nav ng-controller="CartController as cart">
+<nav>
   <ul class="clearfix">
-    <li><a ng-href="#/">Catalogue</a></li>
-    <li><a ng-href="#/my-cart">My Cart</a>
+    <li><a ng-href="#/">Catalogue</a>
       <ul>
-        <li id="nav-items">Items: {{numberInCart();}}</li>
-        <li id="nav-total">Current total: £{{total();}}</li>
+        <li class="nav-items">Redeem Discounts
+          <form name="discountForm" ng-submit="checkCode(discountCode)"> 
+            Code:<input type="text" name="discountCode" ng-model="discountCode" check-code />
+            <span ng-show="discountForm.$submitted && isCodeError()">Please submit a valid code.</span>
+          <form>   
+        </li>
+        <li>
+          <ul class="clearfix" ng-repeat="discount in discountsRedeemed">
+            <li class="discount-item">£{{discount.reduction}} off orders <span ng-if="discount.over">over £{{discount.over}}</span><span ng-if="discount.item"> when you buy a {{discount.item}} item</span></li>
+          </ul>
+        </li>
+      </ul>
+    </li>
+    <li><a ng-href="#/my-cart">View My Cart</a>
+      <ul>
+        <li class="nav-items" id="nav-items">Items: {{numberInCart();}}</li>
+        <li class="nav-items" id="nav-total">Current total: £{{total();}}</li>
       </ul>  
     </li>
   </ul>
