--- a/sass/main.scss
+++ b/sass/main.scss
@@ -35,3 +35,12 @@ nav ul{
     width: 50%;
   }
 }
+nav li.discount-item{
+  width: 100%;
+  padding: 5px;
+  text-align: left;
+  font-size: 10px;      
+}
+nav li.nav-items{
+  font-size: 15px;
+}
