--- a/app/views/index.html
+++ b/app/views/index.html
@@ -3,11 +3,11 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Cart</title>
+    <title>Threds.</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <!-- Place favicon.ico in the root directory -->
+    <link rel="icon" type="image/png" href="/images/favicon.ico">
 
     <link rel="stylesheet" href="/css/reset.css">
     <link rel="stylesheet" href="/css/grid.css">  
@@ -20,7 +20,7 @@
     <!--[if lt IE 8]>
         <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
     <![endif]-->
-    <header class="container clearfix" ng-include="'/partials/nav.html'"></header>
+    <header class="clearfix" ng-include="'/partials/nav.html'"></header>
     <main class="container" ng-view></main>  
 
     <script src="/bower_components/underscore/underscore-min.js"></script>
