--- a/sass/main.scss
+++ b/sass/main.scss
@@ -11,6 +11,7 @@ $items: #72F2C5;
 html{
   color: $beige;
   background-color: #000;
+  font-size: 13px;
 }
 a:visited{
   color: #000;
@@ -29,17 +30,35 @@ a:hover{
   border-radius: 10px;
 }
 
+header{
+  position: fixed;
+  top: 0;
+  width: 100%;
+  background-color: #000;
+  z-index: 10;
+  border-bottom: 1px solid;
+  border-color: $beige;
+  padding-bottom: 20px;
+}
+
+.container{
+  margin: 0;
+  padding: 0 10px;
+}
+
 nav{
+  width: 90%;
+  margin: 0 auto;
   padding: 20px 0;
   i.fa{
     font-size: 2.5rem;
   }
   #items{
-    color: #72F2C5;
+    color: $green;
     padding: 10px;
   }
   #total{
-    color: #55CBE6;
+    color: $lightblue;
   }
   #nav-proper{
     a{
@@ -65,6 +84,7 @@ nav{
   }
   #threds{
     text-align: center;
+    padding-top: 100px;
     h1{
       font-size: 2rem;
       margin-top: 10px;
@@ -84,9 +104,10 @@ nav{
       font-family: sans-serif;
     }
   }
-  span#discount-error{
+  #discount-error{
     color: $warning;
     font-family: sans-serif;
+    letter-spacing: initial;
   }
   div#product-cart{
     margin-top: 20px;
@@ -95,10 +116,21 @@ nav{
 
 section#products,
 section#cart{
+  margin-top: 500px;
+  span{
+    padding: 10px;
+    p{
+      color: $lightblue;
+    }
+  }  
   h2{
     font-family: $font1;
     font-size: 1.75rem;
-    margin-bottom: 20px;
+    border-bottom: 5px solid;
+    border-color: $lightblue;
+    display: inline-block;
+    text-align: center;
+    margin-bottom: 40px;
   }
   li{
     float:left;
@@ -109,9 +141,16 @@ section#cart{
     color: $green;
     padding: 20px 0;  
     text-align: left;
+    border-bottom: 1px solid;
+    border-color: $beige;
+  }
+  .list > li:first-child{
+    padding-right: 15px;
   }
   .headings{
     font-size: 1rem;
+    border-bottom: 1px solid;
+    border-color: $beige;
   }
   .remove-product{
     background-color: $remove;
@@ -119,14 +158,20 @@ section#cart{
   i.fa{
     font-size: 1.5rem;
   }
-  .my-cart{
+  .fa-times{
+    color: $warning;
+  }
+  #my-cart{
+    li{
+      width: 20%;
+      display: block;
+    }
     .remove-product{  
-      a{
-        display: block;
-        float: none;
-        width: 50%;
-        margin: 0 auto;
-      }
+      display: block;
+      float: none;
+      width: 100%;
+      margin: 0 auto;
+      text-align: center;
     }  
   }
   .add-product{
@@ -139,10 +184,31 @@ section#cart{
       float: none;
       margin-bottom: 10px;
       a{
-        width: 50%;
+        width: 100%;
         margin: 0 auto;
+        text-align: center;
       }
     }
   } 
+}
+
+@media (min-width: 768px) {
+  html{
+    font-size: 16px;
+  }
+  section#products,
+  section#cart {
+    margin-top: 214px;
+    padding-top: 20px;
+  }
+  nav #threds{
+    padding-top: 0;
+  }
+  .container{
+    padding-right: 15px;
+    padding-left: 15px;
+    margin-right: auto;
+    margin-left: auto;
+  }   
 }
 
