--- a/app/views/index.html
+++ b/app/views/index.html
@@ -7,7 +7,7 @@
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <link rel="icon" type="image/png" href="/images/favicon.ico">
+    <link rel="icon" type="image/ico" href="/images/favicon.ico">
 
     <link rel="stylesheet" href="/css/reset.css">
     <link rel="stylesheet" href="/css/grid.css">  
@@ -29,7 +29,6 @@
     <script src="/bower_components/angular-resource/angular-resource.min.js"></script>
     <script src="/bower_components/angular-messages/angular-messages.js"></script>
     <script src="/bower_components/jquery/dist/jquery.min.js"></script>
-    <script src="/js/plugins.js"></script>
     <script src="/angular_app/app.js"></script>
     <script src="/angular_app/controllers/appController.js"></script>
     <script src="/angular_app/controllers/productController.js"></script>
