--- a/app/public/css/main.css
+++ b/app/public/css/main.css
@@ -41,6 +41,8 @@ nav {
   font-family: "Fredericka the Great", cursive; }
   nav i.fa {
     font-size: 2.5rem; }
+  nav section:nth-child(2) {
+    padding-top: 20px; }
   nav #items {
     color: #DAF0E7;
     padding: 10px; }
@@ -59,7 +61,7 @@ nav {
     color: #72F2C5; }
   nav #threds {
     text-align: center;
-    padding-top: 100px; }
+    padding-top: 20px; }
     nav #threds h1 {
       font-size: 2rem;
       margin-top: 10px;
@@ -159,6 +161,8 @@ section#cart {
     margin-top: 214px;
     padding-top: 20px; }
   nav #threds {
+    padding-top: 0; }
+  nav section:nth-child(2) {
     padding-top: 0; }
   .container {
     padding-right: 15px;
