--- a/sass/main.scss
+++ b/sass/main.scss
@@ -54,6 +54,9 @@ nav{
   i.fa{
     font-size: 2.5rem;
   }
+  section:nth-child(2){
+    padding-top: 20px;
+  }
   #items{
     color: $green;
     padding: 10px;
@@ -85,7 +88,7 @@ nav{
   }
   #threds{
     text-align: center;
-    padding-top: 100px;
+    padding-top: 20px;
     h1{
       font-size: 2rem;
       margin-top: 10px;
@@ -204,6 +207,9 @@ section#cart{
     padding-top: 20px;
   }
   nav #threds{
+    padding-top: 0;
+  }
+  nav section:nth-child(2){
     padding-top: 0;
   }
   .container{
